# Starfox64

./: .gitignore  CMakeLists.txt  README.md  writeup.md
meshes/Arwing/: menu_arwing.mtl
resources/: arwing.mtl  arwing_projectile.mtl  ground.mtl  quad.mtl  sky.mtl
resources/Bandit/: Bandit.3ds  Bandit.dae
resources/Granga Fighter/: Granga Fighter.3ds  Granga Fighter.dae
resources/Invader I/: Invader I.3ds  Invader I.dae
shaders/: crosshair_frag_shader.glsl  crosshair_vert_shader.glsl  exhaust_frag_shader.glsl  explosion_frag_shader.glsl  explosion_vert_shader.glsl  gblur_frag_shader.glsl  gblur_vert_shader.glsl  normal_frag_shader.glsl  phong_frag_shader.glsl  phong_vert_shader.glsl  simple_color_frag_shader.glsl  simple_color_vert_shader.glsl  texture_frag_shader.glsl  texture_vert_shader.glsl  vert_shader.glsl
src/: Arwing.cpp  Arwing.h  Enemy.cpp  Enemy.h  Environment.cpp  Environment.h  GLSL.h  Interface.cpp  Interface.h  MatrixStack.cpp  MatrixStack.h  Program.cpp  Program.h  Shape.cpp  Shape.h  WindowManager.cpp  WindowManager.h  common.h  main.cpp  tiny_obj_loader.cpp
